Enhance Sidebar Features and Fix Layout Issues

--- a/HTML and SCSS Challenge/scss/_config.scss
+++ b/HTML and SCSS Challenge/scss/_config.scss
@@ -44,3 +44,7 @@ h3 {
     margin: 0;
     padding: 0;
 }
+
+.bg-color {
+    background-color: #e9ecef !important; 
+}
