--- a/HTML and SCSS Challenge/scss/main.scss
+++ b/HTML and SCSS Challenge/scss/main.scss
@@ -1,17 +1,23 @@
 @import 'config';
 
 body {
-    background-color: $primary-color;
     display: flex;
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
     margin: 0;
-    padding: 30px;
 }
 
 .container {
     display: flex;
     width: 100%;
+    padding: 30px;
+    border-radius: 51px;
+    background-color: #F4FAFF;
+    transition: margin-right 0.3s ease;
+
+    &.shifted {
+        margin-right: 360px; // Adjusts content when sidebar is open
+    }
 }
 
 //Nav sidebar
@@ -271,7 +277,7 @@ body {
     border: none;
     border-bottom: 1px solid $grey-line-color;
     margin: -10px 0 0 25px;
-    width: 50%; 
+    width: 45%; 
 }
 
 .menu {
@@ -351,19 +357,25 @@ body {
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             margin-bottom: 10px;
             position: relative;
-
+            z-index: 1;
+    
+            // Fix an issue related the two last rows of the table
+            &:nth-last-child(-n+2) {
+                bottom: 20px;
+            }
+    
             &:hover {
                 background-color: rgb(233, 236, 239);
             }
-
+    
             td {
                 padding: 15px;
-
+    
                 &:first-child {
                     border-bottom-left-radius: 15px;
                     border-top-left-radius: 15px;
                 }
-
+    
                 &:last-child {
                     border-bottom-right-radius: 15px;
                     border-top-right-radius: 15px;
@@ -377,7 +389,7 @@ body {
             /*display: none;*/
             position: relative;
             top: -20px; /* Pull it up to hide the gap */
-            z-index: -1;
+            z-index: 0;
 
             td {
                 border-radius: 0 0 15px 15px !important;
@@ -386,13 +398,22 @@ body {
         }
             .accordion-details {
                 display: flex;
-                gap: 280px;
+                gap: 10px;
                 justify-content: space-between;
                 margin-top: 10px;
-                padding: 15px;
+                padding: 15px 15px 0;
+
+                div:first-of-type {
+                    width: 50%; 
+                }
 
                 div:first-of-type > p:nth-of-type(-n+2) {
                     color: #009DDE;
+                }
+                    
+                img {
+                    margin-right: 10px; 
+                    vertical-align: middle; // Aligns the image with the text baseline
                 }
                 
             }
@@ -468,19 +489,31 @@ body {
 .pagination-controls {
     align-items: center;
     display: flex;
-    gap: 5px;
+    gap: 15px;
 
     .pagination-button {
+        font-family: $font-family;
+        color: #666;
         background-color: #ffffff;
         border: none;
-        border-radius: 5px;
+        border-radius: 15px;
         cursor: pointer;
         padding: 5px 10px;
         transition: background-color 0.3s;
+        border: 1px solid #{$secondary-color};
 
         &:hover {
             background-color: #ddd;
         }
+    }
+
+    .no-pagination-button {
+        font-family: $font-family;
+        color: #666;
+        background-color: #f4faff;
+        border: none;
+        cursor: pointer;
+        padding: 5px 10px;
     }
 }
 
@@ -590,14 +623,9 @@ body {
 
 // Adjust content margin when sidebar is expanded
 .content {
-    margin-left: 95px;
-    padding: 20px;
-    transition: margin-right 0.3s ease;
-    width: 100%;
-
-    &.shifted {
-        margin-right: 360px; // Adjusts content when sidebar is open
-    }
+    margin: auto;
+    width: 90%;
+    margin-left: 115px;
 }
 
 .profile {
@@ -788,7 +816,6 @@ body {
               color: #009DDE;
               font-weight: 500;
             }
-    
        
         }
     
